# 3817061_Silenko_AllLabi

./: .travis.yml  CMakeLists.txt  README.md  Raport_for_LAB_10.docx  Raport_for_LAB_2.docx  Raport_for_LAB_2_.docx  Raport_for_LAB_3.docx  Raport_for_LAB_4.docx  Raport_for_LAB_5.docx  Raport_for_LAB_6.docx  Raport_for_LAB_7.docx  Raport_for_LAB_8.docx  Raport_for_LAB_9.docx  Raport_for_Plex.docx  Raport_for_SortTable.docx  Raport_for_ViewingTable.docx
ArrList/: ArrList_main.cpp
ArrListLib/: ArrList.h
ArrListTest/: ArrListTest.cpp
ExceptionLib/: ExceptionLib.h  ExceptionLib.vcxproj  ExceptionLib.vcxproj.filters  cmake_install.cmake
List/: List_main.cpp
ListLib/: Elem.h  List.h
ListTest/: ListTest.cpp
Matrix/: Matrix.vcxproj  Matrix.vcxproj.filters  Matrix_main.cpp  cmake_install.cmake
MatrixLib/: Matrix.h  Matrixlib.vcxproj  Matrixlib.vcxproj.filters  cmake_install.cmake
MatrixTest/: MatrixTest.cpp  MatrixTest.vcxproj  MatrixTest.vcxproj.filters  Test_main.cpp  cmake_install.cmake
MultiStack/: MultiStack_main.cpp
MultiStackLib/: MultiStack.h  NewStack.h
MultiStackTest/: MultiStackTest.cpp
Plex/: mainPlex.cpp
PlexLib/: CircleLib.h  PlexLib.h  PointLib.h  SectionLib.h
PlexTest/: test_plex.cpp
Polish/: Polish_main.cpp
PolishLib/: Polish.cpp  Stroka.cpp  Stroka.h
PolishTest/: PolishTest.cpp
Polynomial/: CMakeLists.txt  Polynomial.vcxproj  Polynomial.vcxproj.filters  Polynomial_main.cpp  cmake_install.cmake  main.cpp
PolynomialLib/: CMakeLists.txt  Monom.cpp  Monom.h  Polynom.cpp  (+6 more)
Vector/: CMakeLists.txt  Main.cpp  Vector_main.cpp
(+47 files in other folders)
